Se hace refactorizacion