@@ -1,9 +1,8 @@
 package katas;
 
-import com.google.common.collect.ImmutableMap;
 import util.DataUtil;
-import java.util.List;
-import java.util.Map;
+
+import java.util.*;
 import java.util.stream.Collectors;
 
 /*
@@ -53,16 +52,19 @@ public class Kata10 {
         List<Map> videos = DataUtil.getVideos();
 
         return lists.stream()
-                .map(map -> ImmutableMap.of(
-                        "name", map.get("name"), "videos",
-                        videos.stream()
-                                .filter(map1 -> map.get("id").equals(map1.get("listId")))
-                                .map(map1 -> ImmutableMap.of(
-                                        "id", map1.get("id"),
-                                        "title", map1.get("title")
-                                )).collect(Collectors.toList())
+                .map(map -> Map.of(
+                        "name", map.get("name"),
+                        "videos", getVideo(videos, map.get("id"))
                 )).collect(Collectors.toList());
+    }
 
+    private static List<Map<String, Object>> getVideo(List<Map> videos, Object map) {
+        return videos.stream()
+                .filter(map1 -> map.equals(map1.get("listId")))
+                .map(map1 -> Map.of(
+                        "id", map1.get("id"),
+                        "title", map1.get("title")
+                )).collect(Collectors.toList());
     }
 
 }
